fixing title, lady first

--- a/docker/ui/app/static/basic_login.html
+++ b/docker/ui/app/static/basic_login.html
@@ -83,7 +83,7 @@
         <!-- https://cdn.holoviz.org/panel/1.4.0/dist/ -->
         <h3><img id="logo" src="/app/static/romance_final.png" width="139" height="181"></h3>
         
-        <p> Massi & Geno </p>
+        <p> Geno & Massi </p>
       </div>
       <div id="error-message" class="form-group">
         <p style="color:rgb(255, 0, 0);font-weight:bold" class="errormessage">{{errormessage}}</p>
