--- a/docker/ui/app/static/basic_login.html
+++ b/docker/ui/app/static/basic_login.html
@@ -75,6 +75,7 @@
     }
     </style>
 </head>
+
 <body>
   <div class="wrap">
     <form class="login-form" action="./login" method="post">
@@ -95,7 +96,8 @@
       </div>
       <!--Password Input-->
       <div class="form-group">
-        <input name="password" type="password" class="form-input" placeholder="password">
+        <input name="password" type="password" class="form-input" placeholder="password" id="myInput">
+        <input type="checkbox" onclick="myFunction()"> <label> Show Password</label> 
       </div>
       <!--Login Button-->
       <div class="form-group">
@@ -104,5 +106,15 @@
       <!-- <div><small></small></div> -->
     </form>
   </div>
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myInput");
+      if (x.type === "password") {
+        x.type = "text";
+      } else {
+        x.type = "password";
+      }
+    }
+    </script>
 </body>
 </html>
